# ByteTrackEigen

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: helpers.cmake
include/: BYTETracker.h  Export.h
src/: BYTETracker.cpp  KalmanBBoxTrack.cpp
